
	-- New Cards : Not Implemented
	All cards that add CRIT bonus vs. specific race is now applied
	 at 2x rate when installed on a Katar-type weapon.
	 EX) If Goblin Archer card goes on a Katar-type weapon, the CRIT Bonus vs. Undeads become +14.
	4198,Maya_Purple_Card: intravision not working atm
	4296,Cramp_Card: missing getzenybychance??

08/23
	* Updated the skill delay from Breaker (thanks to Vicious Pucca) [Skotlex]
	* Lowered Elder Willow's trunk drop rate from 35% to 3.5% [Skotlex]
	* Changed Ghoul's race from 11 (unknown?) to 1 (undead). [Skotlex]
	* Updated Deviling's mode to make him count as a boss/miniboss. [Skotlex]
	* Corrected Spring Rabbit card improving candy-type item healing rates [Skotlex]
	  (should be meat type since that's what it makes mobs drop)
	* Updated buy/sell prices of some Louyang Drops (thanks to Ishizu) [Skotlex]
08/22
	* Reverted magnum break... it is supposed to be fire element :/ [Skotlex]
	* Updated casting times and delays of Soul Strike & Napalm Beat, range of
	  Ruwach/Sight (thanks to Vicious Pucca) [Skotlex]
	* Updated Magnum Break's element (takes weapon), the fire part is hardcoded. [Skotlex]
	* Removed the temp plug from Cramp Card as it seems it's way too powerful [DracoRPG]
	* Updated skill_tree,job_db1 and job_db2 for new system and Taekwon support [DracoRPG]
	* Moved MVPs from mob_branch.txt to mob_boss.txt (those that had yet to be
	  moved, that is) [Skotlex]
	* Added target flag "ally" to skill_unit_db [Skotlex]
	* Added 0.5 sec delay to Aid Potion, 1 sec casting time & delay to Aid Condensed Potion
	  (from kRO website, thanks to reddozen and vicious_pucca) [DracoRPG]
	* Removed UF_NOFOOTSET from Ice Wall (I have several sources for that) [DracoRPG]
	* Removed slot from nile_rose (All stats +5, event version), added slot to nile_rose_
	  (MaxHP +10, permanent version) [DracoRPG]
	* Added complete (except TK_MISSION) Taekwon skill tree & skill DBs entries [DracoRPG]
08/19