@@ -16,6 +16,12 @@
 	4296,Cramp_Card: missing getzenybychance??
 
 08/23
+	* Updated the mob skill database. When specifying Metamorphosis/Transformation, 
+	  use the skilllv to indicate how many alternatives there are (for example, an
+	  ant egg would use metamorphosis level 3 as it can convert to Andre, Deniro or 
+	  Pierre) [Skotlex]
+	* Set the permilliage (use rate) of Metamorphosis to 50 (0.5%) on all mobs
+	  that had it specified at 0.
 	* Updated the skill delay from Breaker (thanks to Vicious Pucca) [Skotlex]
 	* Lowered Elder Willow's trunk drop rate from 35% to 3.5% [Skotlex]
 	* Changed Ghoul's race from 11 (unknown?) to 1 (undead). [Skotlex]
